cmake_minimum_required(VERSION 3.26)
project(Projeto_AED)

set(CMAKE_CXX_STANDARD 17)

add_executable(Projeto_AED main.cpp
        Read.cpp
        Read.h
        Classes.cpp
        Classes.h
        Student.cpp
        Student.h
        Student.h
        classes_per_uc.cpp
        classes_per_uc.h)
