cmake_minimum_required(VERSION 3.26)
project(Projeto_AED)

set(CMAKE_CXX_STANDARD 17)

add_executable(Projeto_AED main.cpp
        Read.cpp
        Read.h
        Classes.cpp
        Classes.h
        Student.cpp
        Student.h
        Student.h

        Schedule.cpp
        Schedule.h
        Menu.cpp
        Menu.h
        Menu.cpp
        Menu.cpp
        Menu.cpp
        Menu.cpp

        Requests.cpp
        Requests.h
        Classes_Uc.cpp
        Classes_Uc.h
        Slot.cpp
        Slot.h
        Slot.h)

